@@ -1,3 +1,10 @@
+2012-10-11 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V00-02-18
+	* EventInfo information
+	* detect and print mismatch in dataset information
+	* cleanup when Halting
+
 2012-09-02 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V00-02-17
